test/runnable/named_arg.cx
module named_arg;

void foo(int i) { }

class C {
    this() { }
    void foo(int i) { }
}

struct S {
    void foo(int i) { }
}

void main() {
    foo(i=1);
    (new C).foo(i=1);
    S().foo(i=1);
}
