test/fail_compilation/named_arg_struct2.cx
module named_arg_struct2;

struct S {
    int i;
}

void main() {
    auto s = S(j=1);
}
